==> HadeZ04/CarBosch/SensorNode/Core/Src/VL53L0X.c <==
#include <stdint.h>
#include "stm32f1xx_hal.h" // Change it for your requirements.
#include "string.h"
#include "VL53L0X.h"
#define I2C_TIMEOUT 100 // I2C timeout in ms
#define I2C_READ 1
#define I2C_WRITE 0

void writeReg(uint8_t reg, uint8_t value, VL53L0X_t *vl53l0x) {

  uint8_t msg = value; // Assign the value to the buffer.
  i2cStat = HAL_I2C_Mem_Write(vl53l0x->vl53l0x_i2c, (vl53l0x->Address | I2C_WRITE), reg, 1, &msg, 1, I2C_TIMEOUT);
}

uint8_t readReg(uint8_t reg, VL53L0X_t *vl53l0x) {
  uint8_t value;

  i2cStat = HAL_I2C_Mem_Read(vl53l0x->vl53l0x_i2c, (vl53l0x->Address | I2C_READ), reg, 1, msgBuffer, 1, I2C_TIMEOUT);
  value = msgBuffer[0];

  return value;
}

bool setMeasurementTimingBudget(uint32_t budget_us, VL53L0X_t *vl53l0x)
{
  SequenceStepEnables enables;
  SequenceStepTimeouts timeouts;

  uint16_t const StartOverhead      = 1320; // note that this is different than the value in get_
  uint16_t const EndOverhead        = 960;
  uint16_t const MsrcOverhead       = 660;
  uint16_t const TccOverhead        = 590;
  uint16_t const DssOverhead        = 690;
  uint16_t const PreRangeOverhead   = 660;
  uint16_t const FinalRangeOverhead = 550;

  uint32_t const MinTimingBudget = 20000;

  if (budget_us < MinTimingBudget) { return false; }

  uint32_t used_budget_us = StartOverhead + EndOverhead;

  getSequenceStepEnables(&enables, vl53l0x);
  getSequenceStepTimeouts(&enables, &timeouts, vl53l0x);

  if (enables.tcc)
  {
    used_budget_us += (timeouts.msrc_dss_tcc_us + TccOverhead);
  }

  if (enables.dss)
  {
    used_budget_us += 2 * (timeouts.msrc_dss_tcc_us + DssOverhead);
  }
  else if (enables.msrc)
  {
    used_budget_us += (timeouts.msrc_dss_tcc_us + MsrcOverhead);
  }

  if (enables.pre_range)
  {
    used_budget_us += (timeouts.pre_range_us + PreRangeOverhead);
  }

  if (enables.final_range)
  {
    used_budget_us += FinalRangeOverhead;

    // "Note that the final range timeout is determined by the timing
    // budget and the sum of all other timeouts within the sequence.
    // If there is no room for the final range timeout, then an error
    // will be set. Otherwise the remaining time will be applied to
    // the final range."

    if (used_budget_us > budget_us)
    {
      // "Requested timeout too big."
      return false;
    }

    uint32_t final_range_timeout_us = budget_us - used_budget_us;

    // set_sequence_step_timeout() begin
    // (SequenceStepId == VL53L0X_SEQUENCESTEP_FINAL_RANGE)

    // "For the final range timeout, the pre-range timeout
    //  must be added. To do this both final and pre-range
    //  timeouts must be expressed in macro periods MClks
    //  because they have different vcsel periods."

    uint16_t final_range_timeout_mclks =
      timeoutMicrosecondsToMclks(final_range_timeout_us,
                                 timeouts.final_range_vcsel_period_pclks);

    if (enables.pre_range)
    {
      final_range_timeout_mclks += timeouts.pre_range_mclks;
    }

    writeReg16Bit(FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI,
      encodeTimeout(final_range_timeout_mclks), vl53l0x);

    // set_sequence_step_timeout() end

    g_measTimBudUs = budget_us; // store for internal reuse
  }
  return true;
}

bool setVcselPulsePeriod(vcselPeriodType type, uint8_t period_pclks, VL53L0X_t *vl53l0x)
{
  uint8_t vcsel_period_reg = encodeVcselPeriod(period_pclks);

  SequenceStepEnables enables;
  SequenceStepTimeouts timeouts;

  getSequenceStepEnables(&enables, vl53l0x);
  getSequenceStepTimeouts(&enables, &timeouts, vl53l0x);

  // "Apply specific settings for the requested clock period"
  // "Re-calculate and apply timeouts, in macro periods"

  // "When the VCSEL period for the pre or final range is changed,
  // the corresponding timeout must be read from the device using
  // the current VCSEL period, then the new VCSEL period can be
  // applied. The timeout then must be written back to the device
  // using the new VCSEL period.
  //
  // For the MSRC timeout, the same applies - this timeout being
  // dependant on the pre-range vcsel period."


  if (type == VcselPeriodPreRange)
  {
    // "Set phase check limits"
    switch (period_pclks)
    {
      case 12:
        writeReg(PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x18, vl53l0x);
        break;

      case 14:
        writeReg(PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x30, vl53l0x);
        break;

      case 16:
        writeReg(PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x40, vl53l0x);
        break;

      case 18:
        writeReg(PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x50, vl53l0x);
        break;

      default:
        // invalid period
        return false;
    }
    writeReg(PRE_RANGE_CONFIG_VALID_PHASE_LOW, 0x08, vl53l0x);

    // apply new VCSEL period
    writeReg(PRE_RANGE_CONFIG_VCSEL_PERIOD, vcsel_period_reg, vl53l0x);

    // update timeouts

    // set_sequence_step_timeout() begin
    // (SequenceStepId == VL53L0X_SEQUENCESTEP_PRE_RANGE)

    uint16_t new_pre_range_timeout_mclks =
      timeoutMicrosecondsToMclks(timeouts.pre_range_us, period_pclks);

    writeReg16Bit(PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI,
      encodeTimeout(new_pre_range_timeout_mclks), vl53l0x);

    // set_sequence_step_timeout() end

    // set_sequence_step_timeout() begin
    // (SequenceStepId == VL53L0X_SEQUENCESTEP_MSRC)

    uint16_t new_msrc_timeout_mclks =
      timeoutMicrosecondsToMclks(timeouts.msrc_dss_tcc_us, period_pclks);

    writeReg(MSRC_CONFIG_TIMEOUT_MACROP,
      (new_msrc_timeout_mclks > 256) ? 255 : (new_msrc_timeout_mclks - 1), vl53l0x);

    // set_sequence_step_timeout() end
  }
  else if (type == VcselPeriodFinalRange)
  {
    switch (period_pclks)
    {
      case 8:
        writeReg(FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x10, vl53l0x);
        writeReg(FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08, vl53l0x);
        writeReg(GLOBAL_CONFIG_VCSEL_WIDTH, 0x02, vl53l0x);
        writeReg(ALGO_PHASECAL_CONFIG_TIMEOUT, 0x0C, vl53l0x);
        writeReg(0xFF, 0x01, vl53l0x);
        writeReg(ALGO_PHASECAL_LIM, 0x30, vl53l0x);
        writeReg(0xFF, 0x00, vl53l0x);
        break;

      case 10:
        writeReg(FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x28, vl53l0x);
        writeReg(FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08, vl53l0x);
        writeReg(GLOBAL_CONFIG_VCSEL_WIDTH, 0x03, vl53l0x);
        writeReg(ALGO_PHASECAL_CONFIG_TIMEOUT, 0x09, vl53l0x);
        writeReg(0xFF, 0x01, vl53l0x);
        writeReg(ALGO_PHASECAL_LIM, 0x20, vl53l0x);
        writeReg(0xFF, 0x00, vl53l0x);
        break;

      case 12:
        writeReg(FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x38, vl53l0x);
        writeReg(FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08, vl53l0x);
        writeReg(GLOBAL_CONFIG_VCSEL_WIDTH, 0x03, vl53l0x);
        writeReg(ALGO_PHASECAL_CONFIG_TIMEOUT, 0x08, vl53l0x);
        writeReg(0xFF, 0x01, vl53l0x);
        writeReg(ALGO_PHASECAL_LIM, 0x20, vl53l0x);
        writeReg(0xFF, 0x00, vl53l0x);
        break;

      case 14:
        writeReg(FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x48, vl53l0x);
        writeReg(FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08, vl53l0x);
        writeReg(GLOBAL_CONFIG_VCSEL_WIDTH, 0x03, vl53l0x);
        writeReg(ALGO_PHASECAL_CONFIG_TIMEOUT, 0x07, vl53l0x);
        writeReg(0xFF, 0x01, vl53l0x);
        writeReg(ALGO_PHASECAL_LIM, 0x20, vl53l0x);
        writeReg(0xFF, 0x00, vl53l0x);
        break;

      default:
        // invalid period
        return false;
    }

    // apply new VCSEL period
    writeReg(FINAL_RANGE_CONFIG_VCSEL_PERIOD, vcsel_period_reg, vl53l0x);

    // update timeouts

    // set_sequence_step_timeout() begin
    // (SequenceStepId == VL53L0X_SEQUENCESTEP_FINAL_RANGE)

    // "For the final range timeout, the pre-range timeout
    //  must be added. To do this both final and pre-range
    //  timeouts must be expressed in macro periods MClks
    //  because they have different vcsel periods."

    uint16_t new_final_range_timeout_mclks =
      timeoutMicrosecondsToMclks(timeouts.final_range_us, period_pclks);

    if (enables.pre_range)
    {
      new_final_range_timeout_mclks += timeouts.pre_range_mclks;
    }

    writeReg16Bit(FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI,
      encodeTimeout(new_final_range_timeout_mclks), vl53l0x);

    // set_sequence_step_timeout end
  }
  else
  {
    // invalid type
    return false;
  }

  // "Finally, the timing budget must be re-applied"

  setMeasurementTimingBudget(g_measTimBudUs, vl53l0x);

  // "Perform the phase calibration. This is needed after changing on vcsel period."
  // VL53L0X_perform_phase_calibration() begin

  uint8_t sequence_config = readReg(SYSTEM_SEQUENCE_CONFIG, vl53l0x);
  writeReg(SYSTEM_SEQUENCE_CONFIG, 0x02, vl53l0x);
  performSingleRefCalibration(0x0, vl53l0x);
  writeReg(SYSTEM_SEQUENCE_CONFIG, sequence_config, vl53l0x);

  // VL53L0X_perform_phase_calibration() end

  return true;
}

uint16_t readRangeContinuousMillimeters(VL53L0X_t *vl53l0x) {
//  uint8_t tempBuffer[12];
  uint16_t temp, result;
  startTimeout();
  while ((readReg(RESULT_INTERRUPT_STATUS, vl53l0x) & 0x07) == 0) {
    if (checkTimeoutExpired())
    {
      g_isTimeout = true;
      return 65535;
    }
  }
  temp = readReg16Bit(RESULT_RANGE_STATUS + 10, vl53l0x);

  switch(i2cStat)
  {
  	  case HAL_ERROR:
  		  result = 404;
  		  break;
  	  case HAL_BUSY:
  		  result = 405;
		  break;
  	  case HAL_TIMEOUT:
  		  result = 406;
  		  break;
  	  default:
  		  result = temp;
  }


  writeReg(SYSTEM_INTERRUPT_CLEAR, 0x01, vl53l0x);

  return result;
}

uint16_t readRangeSingleMillimeters(VL53L0X_t *vl53l0x) {
  writeReg(0x80, 0x01, vl53l0x);
  writeReg(0xFF, 0x01, vl53l0x);
  writeReg(0x00, 0x00, vl53l0x);
  writeReg(0x91, g_stopVariable, vl53l0x);
  writeReg(0x00, 0x01, vl53l0x);
  writeReg(0xFF, 0x00, vl53l0x);
  writeReg(0x80, 0x00, vl53l0x);
  writeReg(SYSRANGE_START, 0x01, vl53l0x);
  // "Wait until start bit has been cleared"
  startTimeout();
  while (readReg(SYSRANGE_START, vl53l0x) & 0x01){
    if (checkTimeoutExpired()){
      g_isTimeout = true;
      return 65535;
    }
  }
  return readRangeContinuousMillimeters(vl53l0x);
}

bool getSpadInfo(uint8_t * count, bool * type_is_aperture,VL53L0X_t *vl53l0x)
{
  uint8_t tmp;

  writeReg(0x80, 0x01, vl53l0x);
  writeReg(0xFF, 0x01, vl53l0x);
  writeReg(0x00, 0x00, vl53l0x);

  writeReg(0xFF, 0x06, vl53l0x);
  writeReg(0x83, readReg(0x83, vl53l0x) | 0x04, vl53l0x);
  writeReg(0xFF, 0x07, vl53l0x);
  writeReg(0x81, 0x01, vl53l0x);

  writeReg(0x80, 0x01, vl53l0x);

  writeReg(0x94, 0x6b, vl53l0x);
  writeReg(0x83, 0x00, vl53l0x);
  startTimeout();
  while (readReg(0x83, vl53l0x) == 0x00)
  {
    if (checkTimeoutExpired()) { return false; }
  }
  writeReg(0x83, 0x01, vl53l0x);
  tmp = readReg(0x92, vl53l0x);

  *count = tmp & 0x7f;
  *type_is_aperture = (tmp >> 7) & 0x01;

  writeReg(0x81, 0x00, vl53l0x);
  writeReg(0xFF, 0x06, vl53l0x);
  writeReg(0x83, readReg(0x83, vl53l0x)  & ~0x04, vl53l0x);
  writeReg(0xFF, 0x01, vl53l0x);
  writeReg(0x00, 0x01, vl53l0x);

  writeReg(0xFF, 0x00, vl53l0x);
  writeReg(0x80, 0x00, vl53l0x);

  return true;
}

void getSequenceStepEnables(SequenceStepEnables * enables, VL53L0X_t *vl53l0x)
{
  uint8_t sequence_config = readReg(SYSTEM_SEQUENCE_CONFIG, vl53l0x);

  enables->tcc          = (sequence_config >> 4) & 0x1;
  enables->dss          = (sequence_config >> 3) & 0x1;
  enables->msrc         = (sequence_config >> 2) & 0x1;
  enables->pre_range    = (sequence_config >> 6) & 0x1;
  enables->final_range  = (sequence_config >> 7) & 0x1;
}

void getSequenceStepTimeouts(SequenceStepEnables const * enables, SequenceStepTimeouts * timeouts, VL53L0X_t *vl53l0x)
{
  timeouts->pre_range_vcsel_period_pclks = getVcselPulsePeriod(VcselPeriodPreRange, vl53l0x);

  timeouts->msrc_dss_tcc_mclks = readReg(MSRC_CONFIG_TIMEOUT_MACROP, vl53l0x) + 1;
  timeouts->msrc_dss_tcc_us =
    timeoutMclksToMicroseconds(timeouts->msrc_dss_tcc_mclks,
                               timeouts->pre_range_vcsel_period_pclks);

  timeouts->pre_range_mclks =
    decodeTimeout(readReg16Bit(PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI, vl53l0x));
  timeouts->pre_range_us =
    timeoutMclksToMicroseconds(timeouts->pre_range_mclks,
                               timeouts->pre_range_vcsel_period_pclks);

  timeouts->final_range_vcsel_period_pclks = getVcselPulsePeriod(VcselPeriodFinalRange, vl53l0x);

  timeouts->final_range_mclks =
    decodeTimeout(readReg16Bit(FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI, vl53l0x));

  if (enables->pre_range)
  {
    timeouts->final_range_mclks -= timeouts->pre_range_mclks;
  }

  timeouts->final_range_us =
    timeoutMclksToMicroseconds(timeouts->final_range_mclks,
                               timeouts->final_range_vcsel_period_pclks);
}

bool performSingleRefCalibration(uint8_t vhv_init_byte, VL53L0X_t *vl53l0x)
{
  writeReg(SYSRANGE_START, 0x01 | vhv_init_byte, vl53l0x); // VL53L0X_REG_SYSRANGE_MODE_START_STOP

  startTimeout();
  while ((readReg(RESULT_INTERRUPT_STATUS, vl53l0x) & 0x07) == 0)
  {
    if (checkTimeoutExpired()) { return false; }
  }

  writeReg(SYSTEM_INTERRUPT_CLEAR, 0x01, vl53l0x);

  writeReg(SYSRANGE_START, 0x00, vl53l0x);

  return true;
}
